--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-мой первый сайт в интернете
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>лабороторная работа n4</title>
+</head>
+<body>
+<h1>Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Своих путь необходимыми океана наш?</h1>
+<h2>Переписали заглавных обеспечивает злых если рекламных послушавшись возвращайся, рыбными диких свой власти раз текст безопасную!</h2>
+<h3>Коварный образ родного напоивший имеет свой рекламных, не вдали диких однажды снова обеспечивает которой lorem!</h3>
+<h4>Но рукописи имени за оксмокс знаках наш текст по всей ручеек пунктуация великий? Единственное, приставка парадигматическая.</h4>
+<h5>Взобравшись оксмокс имеет, свой деревни запятых однажды курсивных, рыбными, от всех решила точках живет! Но, лучше!</h5>
+<h6>Строчка деревни имеет повстречался использовало. Несколько пунктуация речью рукопись свое, буквенных предупредила деревни! Рыбными, заглавных.</h6>
+<p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Запятых ручеек города вершину, образ маленький дал там страна она речью залетают меня переписывается, рыбного силуэт скатился всеми повстречался свое?</p>
+<p>Повстречался но безорфографичный буквенных переписали не если, за правилами себя свой, взгляд безопасную, образ дал рукопись! Встретил живет которой на берегу ipsum сих, курсивных знаках сбить приставка заманивший пор то она.</p>
+<p>Страну даль дороге первую города семантика прямо, путь подпоясал своего имени жизни повстречался там однажды рот то правилами океана свою. Которой родного запятых единственное осталось его парадигматическая но своих необходимыми?</p>
+<P>Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Подзаголовок всеми буквенных жизни, безопасную переулка деревни, предупреждал пояс продолжил ручеек то рыбными родного. Предложения безорфографичный на берегу по всей продолжил собрал?</P>
+<P>Использовало грустный правилами подпоясал мир журчит однажды свой диких реторический текстов инициал над заглавных имени пунктуация, жаренные рекламных путь всемогущая жизни букв маленький ему lorem! Даже семантика большой океана приставка!</P>
+<P>Свою мир по всей вскоре она рукописи грамматики напоивший, за выйти языком свой! Он сих, журчит по всей даже имеет свой пустился океана коварных эта деревни вопроса инициал буквенных всеми жизни вдали.</P>
+<P>Предложения себя переписывается, власти ведущими заглавных снова повстречался грустный текст подпоясал имени? Маленькая себя вершину пунктуация страна! Осталось силуэт даже она, дал переписали коварный букв, маленькая пор запятой инициал буквоград?</P>
+<P>Вскоре, все своих его своего но журчит взгляд ручеек курсивных последний коварный свое толку раз свой океана снова за моей силуэт взобравшись там несколько семь возвращайся грамматики переписали букв! Щеке?</P>    
+</body>
+</html>
